# openai-qwen-asr

./: .gitignore  OPENAI_ASR_SERVER_PLAN.md  README.md  main.py  pyproject.toml  test_realtime_client.py
memory_bank/active_context/: current_status.md
memory_bank/product_context/: objective_and_background.md
memory_bank/progress/: project_progress.md
memory_bank/project_brief/: core_requirements.md
memory_bank/system_patterns/: architecture.md  decisions.md
memory_bank/tech_context/: restrictions.md  technical_configuration.md
server/: app.py  config.py  errors.py  metrics.py  models.py
server/asr/: __init__.py  engine.py  realtime.py  streaming.py
server/middleware/: __init__.py
server/routes/: realtime.py  transcriptions.py
server/utils/: audio.py  model_mapping.py
tests/: test_audio.py  test_errors.py  test_metrics.py  test_model_mapping.py  test_models.py  test_realtime.py  test_streaming.py
