[project]
name = "openai-qwen-asr"
version = "0.1.0"
description = "OpenAI API compatible ASR server using mlx-qwen3-asr"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "mlx-qwen3-asr>=0.1.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
]
